# django-music-tjaygrantham

./: README.md  pyproject.toml
albums/: forms.py  models.py  views.py
albums/migrations/: 0001_initial.py  0002_album_artwork.py  0003_remove_album_artwork.py  0004_album_year.py  0005_auto_20200628_1929.py  0006_album_artworkurl.py  0007_auto_20200629_1149.py  0008_auto_20200629_1149.py  0009_auto_20200629_1150.py  0010_remove_album_artworkurl.py  0011_album_artworkurl.py  0012_auto_20200629_1214.py  0013_auto_20200629_1214.py  0014_auto_20200629_1217.py  0015_album_colors.py
albums/templatetags/: mytags.py
django_music/: settings.py  urls.py
static/css/: style.css
templates/: base.html
templates/albums/: add_album.html  delete_album.html  edit_album.html  list_albums.html  show_album.html
